<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Fon Settings</string>
	<string
		name="svc_name"
		translatable="false">ConMan</string>
	<string name="app_credits"><![CDATA[Automatic authenticator for Fon networks.<p>%1$s</p>This application is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License (GPL) version 3, as published by the Free Software Foundation.<p>Source code available on %2$s.</p>]]></string>
	<string
		name="app_copyright"
		translatable="false">Copyright © 2015 Rui Salvaterra</string>
	<string
		name="app_source"
		translatable="false"><![CDATA[<a href="https://github.com/rsalvaterra/Fon">GitHub</a>]]></string>
	<string name="close">Close</string>
	<string name="advanced">Advanced settings</string>
	<string name="basic">Basic settings</string>
	<string name="about">About</string>
	<string
		name="kabout"
		translatable="false">about</string>
	<string name="accept">Accept</string>
	<string
		name="kusername"
		translatable="false">username</string>
	<string name="username">User name</string>
	<string name="usernameSummary">Your user name (email).</string>
	<string
		name="kpassword"
		translatable="false">password</string>
	<string name="password">Password</string>
	<string name="passwordSummary">Your password.</string>
	<string
		name="kautoconnect"
		translatable="false">autoconnect</string>
	<string name="autoconnect">Connect automatically</string>
	<string name="autoconnectSummary">Automatically connect to any available Fon access point.</string>
	<string
		name="kreconnect"
		translatable="false">reconnect</string>
	<string name="reconnect">Allow reconnection</string>
	<string name="reconnectSummary">Disconnect from Fon and connect to a known network, if found.</string>
	<string
		name="ksecure"
		translatable="false">secure</string>
	<string name="secure">Secure only</string>
	<string name="secureSummary">Only consider secure networks for reconnection.</string>
	<string
		name="kperiod"
		translatable="false">period</string>
	<string name="period">Period between scans</string>
	<string name="periodSummary">%s seconds</string>
	<string
		name="kreject"
		translatable="false">reject</string>
	<string name="reject">Reject weak APs</string>
	<string name="rejectSummary">Avoid connections to APs with weak signal.</string>
	<string
		name="krssi"
		translatable="false">rssi</string>
	<string name="rssi">Minimum power</string>
	<string
		name="rssiSummary"
		translatable="false">%s dBm</string>
	<string name="notifications">Notifications</string>
	<string
		name="knotify"
		translatable="false">notify</string>
	<string name="notify">Notify</string>
	<string
		name="ksuccess"
		translatable="false">success</string>
	<string name="success">Tone (success)</string>
	<string
		name="kfailure"
		translatable="false">failure</string>
	<string name="failure">Tone (error)</string>
	<string
		name="kvibrate"
		translatable="false">vibrate</string>
	<string name="vibrate">Vibrate</string>
	<string name="connected">Connected to \"%s\".</string>
	<string name="fon_error">Error %1$d: \"%2$s\"</string>
	<string name="cred_error">Invalid credentials</string>
	<string name="logoff">Touch to logoff.</string>
	<string name="configure">Touch to configure.</string>
	<string name="started">Session started</string>
</resources>