<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<PreferenceCategory
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:title="@string/basic">

		<CheckBoxPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="true"
			android:key="@string/kautoconnect"
			android:summary="@string/autoconnectSummary"
			android:title="@string/autoconnect" />

		<EditTextPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			android:key="@string/kusername"
			android:summary="@string/usernameSummary"
			android:title="@string/username" />

		<EditTextPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:key="@string/kpassword"
			android:summary="@string/passwordSummary"
			android:title="@string/password" />

	</PreferenceCategory>

	<PreferenceCategory
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:title="@string/notifications">

		<CheckBoxPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="true"
			android:key="@string/knotify"
			android:title="@string/notify" />

		<RingtonePreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="content://settings/system/notification_sound"
			android:dependency="@string/knotify"
			android:key="@string/ksuccess"
			android:layout="?android:attr/preferenceLayoutChild"
			android:ringtoneType="notification"
			android:title="@string/success" />

		<RingtonePreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="content://settings/system/notification_sound"
			android:dependency="@string/knotify"
			android:key="@string/kfailure"
			android:layout="?android:attr/preferenceLayoutChild"
			android:ringtoneType="notification"
			android:title="@string/failure" />

		<CheckBoxPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="false"
			android:dependency="@string/knotify"
			android:key="@string/kvibrate"
			android:layout="?android:attr/preferenceLayoutChild"
			android:title="@string/vibrate" />

	</PreferenceCategory>

	<PreferenceCategory
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:title="@string/advanced">

		<CheckBoxPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="false"
			android:key="@string/kreconnect"
			android:summary="@string/reconnectSummary"
			android:title="@string/reconnect" />

		<CheckBoxPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="true"
			android:dependency="@string/kreconnect"
			android:key="@string/ksecure"
			android:layout="?android:attr/preferenceLayoutChild"
			android:summary="@string/secureSummary"
			android:title="@string/secure" />

		<EditTextPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="300"
			android:dependency="@string/kreconnect"
			android:inputType="number"
			android:key="@string/kperiod"
			android:layout="?android:attr/preferenceLayoutChild"
			android:maxLength="4"
			android:title="@string/period" />

		<CheckBoxPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="false"
			android:key="@string/kreject"
			android:summary="@string/rejectSummary"
			android:title="@string/reject" />

		<EditTextPreference
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:defaultValue="-80"
			android:dependency="@string/kreject"
			android:inputType="numberSigned"
			android:key="@string/krssi"
			android:layout="?android:attr/preferenceLayoutChild"
			android:maxLength="3"
			android:title="@string/rssi" />

	</PreferenceCategory>

	<Preference
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:key="@string/kabout"
		android:title="@string/about" />

</PreferenceScreen>